Fix : overflow

--- a/css/mostread-category.css
+++ b/css/mostread-category.css
@@ -41,7 +41,8 @@
     display: flex;
     flex-direction: column;
     width: 325px;
-    height: 284px;
+    max-height: 284px;
+    overflow-y: hidden;
     background: #FFFFFF;
     border: 1px solid #E8E8E8;
     padding: 16px;
